# crcx

./: .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  Makefile.am  README.md  annotated.html  bootstrap.sh  classcrc3x_1_1Crc.html  classcrc3x_1_1Crc__coll__graph.map  classcrc3x_1_1Crc__coll__graph.md5  classes.html  configure.ac  crc3x_8h.html  crc3x_8h__incl.map  crc3x_8h__incl.md5  crc3x_8h_source.html  crcx_8h.html  crcx_8h__incl.map  crcx_8h__incl.md5  crcx_8h_source.html  dir_000000_000001.html  dir_000000_000002.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_c23e1aac74f176faf2654d1c277defbd.html  dir_f1b262625baaed72dd8f9e52d4387287.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  (+3 more)
.scripts/: build-and-install-libgtest-libraries.sh
docs/: Doxyfile  Doxyfile.in  Makefile.am
m4/: c11.m4
search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_6.js  variables_7.js
src/: CMakeLists.txt  Makefile.am  crc3x.cpp  crc3x.pc.in  crcx.c  crcx.h  crcx.pc.in  crcxxx.cpp  crcxxx.pc.in
src/crc3x/: crc3x.h
src/crcx/: _cdefs.h  crcx.h  crcxxx.h
test/: CMakeLists.txt  Makefile.am  crc3x-test.cpp  crcx-test.cpp  crcxxx-test.cpp
